api3-tours/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sample-apis
  labels:
    app.kubernetes.io/part-of: sample-apis
