api3-tours/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tours-api
  namespace: sample-apis
  labels:
    app: tours-api
spec:
  selector:
    app: tours-api
  ports:
    - name: http
      port: 3002
      targetPort: 3002
      protocol: TCP
  type: ClusterIP
